--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -4,11 +4,24 @@ section.services--area {
     margin-top: 5rem;
 }
 
+section.services--area .services--header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+section.services--area .services--header hr {
+    margin-top: 10px;
+    background-color: orange;
+    color: orange;
+}
+
 section.services--area .services--header h1 {
     text-align: center;
     font-size: 3rem;
     text-transform: uppercase;
-    color: rgb(253, 167, 7);
+    color: rgb(0, 0, 0);
     letter-spacing: 5px;
 }
 
