--- a/src/others/Service.css
+++ b/src/others/Service.css
@@ -5,11 +5,9 @@
 
 .service .service--image img  {
     width: 100%;
-    filter: brightness(1);
-    transition: all 0.4s ease-in-out;
 }
 
-.service .service--image img:hover {
+.service .service--image img {
     filter: brightness(0.4);
 }
 
@@ -18,10 +16,8 @@
     left: 0;
     bottom: 0;
     padding: 0.5rem;
-    background-color: rgba(255, 166, 0, 0.281);
+    background-color: rgba(255, 166, 0, 0.349);
     width: 100%;
-    opacity: 0;
-    transition: all 0.6s ease;
 }
 
 .service .service--text--area .service--heading h2 {
@@ -32,8 +28,4 @@
 
 .service .service--text--area .service--text p {
     color: white;
-}
-
-.service:hover .service--text--area {
-    opacity: 1;
 }
