--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,13 @@ ul li {
 a {
   text-decoration: none;
 }
+
+::-webkit-scrollbar {
+  width: 7px;
+  background: rgb(255, 255, 255);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 30px;
+  background-color: rgb(255, 154, 3);
+}
