added enough spacing between components

--- a/src/styles/HowIWork.css
+++ b/src/styles/HowIWork.css
@@ -1,5 +1,5 @@
 section#how--it--works {
-    margin: 10rem auto 1rem;
+    margin: 20rem 0rem 0rem 0rem;
 }
 
 section#how--it--works .how--it--works--header {
