--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -1,7 +1,6 @@
 section.services--area {
     width: 100vw;
-    height: 80vh;
-    margin-top: 5rem;
+    margin: 20rem 0rem 0rem 0rem;
 }
 
 section.services--area .services--header {
@@ -34,7 +33,7 @@ section.services--area .services--brief--text p {
 
 section.services--area .services {
     width: 100%;
-    margin: 2rem auto 1rem;
+    margin: 3rem auto 0rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 2fr));
     gap: 5px;
