--- a/src/others/FeaturedServices.css
+++ b/src/others/FeaturedServices.css
@@ -1,5 +1,6 @@
 section#featured--services {
     width: 100%;
+    margin: 20rem 0rem 0rem 0rem;
 }
 
 section#featured--services .featured--services--heading {
