--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -4,7 +4,7 @@
 
 section#about--me .about--content {
     width: 100%;
-    margin: 10rem 0rem;
+    margin: 20rem 0rem 0rem 0rem;
     display: flex;
     align-items: center;
     justify-content: center;
