--- a/src/styles/WevGatYou.css
+++ b/src/styles/WevGatYou.css
@@ -1,5 +1,5 @@
 section#we--have--gat--you {
-    margin: 7rem auto 1rem;
+    margin: 20rem 0rem 0rem 0rem;
     width: 100%;
     display: flex;
     align-items: center;
