--- a/src/pages/contacts/Contacts.css
+++ b/src/pages/contacts/Contacts.css
@@ -56,3 +56,178 @@
     color: white;
     font-size: 1.5rem;
 }
+
+#contacts--area .contacts__info {
+    margin: 6rem 2rem 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border: 1px solid rgb(245, 245, 245);
+}
+
+#contacts--area .contacts__info .address__area,
+#contacts--area .contacts__info .email__area,
+#contacts--area .contacts__info .phone__area {
+    padding: 1rem;
+    width: 500px;
+    height: auto;
+    border-radius: 4px;
+}
+
+#contacts--area .contacts__info .address__area .icon,
+#contacts--area .contacts__info .email__area .icon,
+#contacts--area .contacts__info .phone__area .icon {
+    padding: 2rem;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90px;
+    height: 90px;
+    border-radius: 3px;
+    margin-bottom: 1.5rem;
+}
+
+#contacts--area .contacts__info .address__area .icon:hover,
+#contacts--area .contacts__info .email__area .icon:hover,
+#contacts--area .contacts__info .phone__area .icon:hover {
+    background: rgb(235, 98, 7);
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+#contacts--area .contacts__info .address__area .icon:hover i,
+#contacts--area .contacts__info .email__area .icon:hover i,
+#contacts--area .contacts__info .phone__area .icon:hover i {
+    color: white;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+#contacts--area .contacts__info .address__area .icon .fa-map,
+#contacts--area .contacts__info .email__area .icon .fa-envelope,
+#contacts--area .contacts__info .phone__area .icon .fa-phone {
+    font-size: 3rem;
+    color: rgb(235, 98, 7);
+}
+
+#contacts--area .contacts__info .address__area .icon i,
+#contacts--area .contacts__info .email__area .icon i,
+#contacts--area .contacts__info .phone__area .icon i {
+    font-size: 2.5rem;
+    color: black;
+}
+
+#contacts--area .contacts__info .address__area .header,
+#contacts--area .contacts__info .email__area .header,
+#contacts--area .contacts__info .phone__area .header {
+    margin: 1rem 0;
+    font-size: 1.3rem;
+    font-weight: bolder;
+}
+
+#contacts--area .contacts__info .address__area .text,
+#contacts--area .contacts__info .email__area .text,
+#contacts--area .contacts__info .phone__area .text {
+    font-size: 1.3rem;
+    line-height: 1.4;
+}
+
+#contacts--area .contacts__info .address__area .map-info,
+#contacts--area .contacts__info .email__area .email,
+#contacts--area .contacts__info .phone__area .number {
+    margin: 1rem 0;
+    color: rgb(235, 98, 7);
+    font-size: 1.2rem;
+}
+
+section.contacts-form {
+    margin-top: 4rem;
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+section.contacts-form form {
+    text-align: left;
+}
+
+section.contacts-form form .form--header h2 {
+    font-size: 3.5rem;
+    line-height: 2;
+    text-align: center;
+}
+
+section.contacts-form form .form--header__text {
+    width: 800px;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+section.contacts-form form .form--header__text p {
+    font-size: 1.2rem;
+    line-height: 1.3;
+}
+
+section.contacts-form form .input__areas {
+    width: 900px;
+    height: auto;
+    text-align: left;
+}
+
+section.contacts-form form .input__areas .input--area {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    line-height: 2;
+    text-align: left;
+}
+
+section.contacts-form form .input__areas .input--area label {
+    text-align: left;
+    font-size: 1.2rem;
+}
+
+section.contacts-form form .input__areas .input--area label sup {
+    color: red;
+    font-size: 2rem;
+}
+
+section.contacts-form form .input__areas .input--area input {
+    width: 80%;
+    padding: 0.8rem 1rem;
+    border: 1px solid rgb(212, 212, 212);
+    outline: none;
+    font-family: "Quicksand", sans-serif;
+    font-size: 1.1rem;
+}
+
+section.contacts-form form .input__areas .input--area textarea {
+    width: 80%;
+    padding: 0.8rem 1rem;
+    border: 1px solid rgb(212, 212, 212);
+    outline: none;
+    font-family: "Quicksand", sans-serif;
+    font-size: 1.2rem;
+    margin-bottom: 1.1rem;
+}
+
+section.contacts-form form .button button {
+    width: 80%;
+    padding: 0.8rem 1rem;
+    font-family: "Quicksand", sans-serif;
+    font-size: 1.1rem;
+    color: white;
+    background-color: rgb(235, 98, 7);
+    outline: none;
+    border: none;
+    text-transform: capitalize;
+}
+
+section.contacts-form form .button button:hover {
+    background-color: rgb(175, 73, 5);
+    transition: all 0.1s ease-in-out;
+    cursor: pointer;
+}
