--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,4 +1,7 @@
 nav {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 6vh;
     background-color: rgb(0, 0, 0);
@@ -6,6 +9,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     padding: 1rem 1rem 1rem 1rem;
+    z-index: 999;
 }
 
 nav .logo--area {
