Added packages page

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -51,8 +51,7 @@
 }
 
 #footer--area .summary .logo img {
-    width: 100px;
-    height: 100px;
+    margin-right: 1rem;
 }
 
 #footer--area .summary .logo p {
