--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -9,7 +9,7 @@ header {
 
 header .hero--section {
     width: 100%;
-    height: auto;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
