Updated situations area

--- a/src/styles/Situations.css
+++ b/src/styles/Situations.css
@@ -1,6 +1,6 @@
 section#situations--section {
     width: 100%;
-    margin: 20rem 0rem 0rem 0rem;
+    margin: 15rem 0rem 0rem 0rem;
     padding: 2rem 2rem;
     display: flex;
     align-items: center;
@@ -25,13 +25,14 @@ section#situations--section .situations--header p {
 }
 
 section#situations--section .situations--content {
-    /* display: flex;
+    display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center; */
-    display: grid;
+    justify-content: center;
+    /* display: grid;
     grid-template-columns: repeat(auto-fit, minmax(17rem, 4fr));
-    place-items: center center;
+    place-items: center;
+    align-items: center; */
     width: 100%;
     margin: 2rem auto;
     gap: 2px;
