--- a/src/styles/Situations.css
+++ b/src/styles/Situations.css
@@ -1,11 +1,8 @@
 section#situations--section {
-    width: 100%;
+    width: 100%!important;
     margin: 15rem 0rem 0rem 0rem;
     padding: 2rem 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    display: block;
 }
 
 section#situations--section .situations--header {
@@ -25,15 +22,11 @@ section#situations--section .situations--header p {
 }
 
 section#situations--section .situations--content {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    /* display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(17rem, 4fr));
-    place-items: center;
-    align-items: center; */
-    width: 100%;
-    margin: 2rem auto;
-    gap: 2px;
+    margin: 0 auto;
+    width: 900px;
+    display: grid;
+    align-content: center;
+    grid-template-columns: auto auto auto auto;
+    justify-content: space-evenly;
+    gap: 2rem;
 }
