--- a/src/others/BookAppointment.css
+++ b/src/others/BookAppointment.css
@@ -10,13 +10,21 @@ form.book--appointment__form .form--header {
     margin-bottom: 1rem;
 }
 
+form.book--appointment__form .form--header.appointment {
+    margin-top: -1.5rem;
+}
+
+form.book--appointment__form .form--header.address {
+    margin-top: 1rem;
+}
+
 form.book--appointment__form .input--area {
     width: 100%;
 }
 
 form.book--appointment__form .input--area input {
     width: 100%;
-    padding: 0.8rem 1rem;
+    padding: 0.7rem 1rem;
     border: 1px solid rgb(223, 223, 223);
     border-radius: 3px;
     margin: 0.2rem 0;
@@ -29,7 +37,18 @@ form.book--appointment__form .input--area input[type="email"],
 form.book--appointment__form .input--area input[type=email],
 form.book--appointment__form .input--area input::placeholder {
     font-family: "Quicksand", sans-serif;
-    font-size: 0.9rem;
+    font-size: 1rem;
+}
+
+form.book--appointment__form .input--area input[type="date"],
+form.book--appointment__form .input--area input[type=date] {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 1rem;
+    border: 1px solid rgb(223, 223, 223);
+    background-color: #fff;
+    padding: 0.8rem 1rem;
+    box-shadow: inset 0 3px 6px rgba(218, 218, 218, 0.1);
+    width: 100%;
 }
 
 form.book--appointment__form button {
@@ -42,7 +61,7 @@ form.book--appointment__form button {
     font-size: 1rem;
     text-transform: uppercase;
     width: 100%;
-    padding: 0.5rem 1rem;
+    padding: 0.7rem 1rem;
     text-align: center;
 }
 
