--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,7 +4,7 @@ nav {
     left: 0;
     width: 100%;
     height: 6vh;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: space-between;
