--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -1,22 +1,22 @@
-section.services--area {
+section#services--area {
     width: 100vw;
     margin: 20rem 0rem 0rem 0rem;
 }
 
-section.services--area .services--header {
+section#services--area .services--header {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 
-section.services--area .services--header hr {
+section#services--area .services--header hr {
     margin-top: 10px;
     background-color: orange;
     color: orange;
 }
 
-section.services--area .services--header h1 {
+section#services--area .services--header h1 {
     text-align: center;
     font-size: 3rem;
     text-transform: uppercase;
@@ -24,14 +24,14 @@ section.services--area .services--header h1 {
     letter-spacing: 5px;
 }
 
-section.services--area .services--brief--text p {
+section#services--area .services--brief--text p {
     margin-top: 1.1rem;
     font-size: 1.2rem;
     text-transform: capitalize;
     text-align: center;
 }
 
-section.services--area .services {
+section#services--area .services {
     width: 70%;
     margin: 3rem auto 0rem;
 }
