--- a/src/others/Service.css
+++ b/src/others/Service.css
@@ -44,3 +44,36 @@
     text-decoration: none;
     color: rgb(0, 0, 0);
 }
+
+/* media queries */
+
+/* small phones */
+@media screen and (max-width: 700px) {
+    .service {
+        width: 400px;
+        cursor: pointer;
+        margin: 0 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: left;
+        padding: 1.3rem;
+    }
+    .service .service--text--area .service--heading {
+        font-size: 1rem;
+    }
+    
+    .service .service--text--area .service--text {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        text-align: left;
+    }
+    
+    .service .service--text--area .service--text p {
+        margin-bottom: 1rem;
+        line-height: 1.5;
+        font-size: 1rem;
+    }
+}
