--- a/src/styles/Situations.css
+++ b/src/styles/Situations.css
@@ -30,3 +30,37 @@ section#situations--section .situations--content {
     justify-content: space-evenly;
     gap: 2rem;
 }
+
+/* media queries */
+
+/* small phones */
+@media screen and (max-width: 700px) {
+    section#situations--section {
+        width: 100%!important;
+        margin: 10rem 0rem 0rem 0rem;
+        padding: 2rem 2rem;
+        display: block;
+    }
+    section#situations--section .situations--header h2 {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+    section#situations--section .situations--header {
+        text-align: center;
+        line-height: 1.4;
+        width: 100%;
+        margin: 2rem auto;
+    }
+    section#situations--section .situations--header p {
+        font-size: 1.2rem;
+    }
+    section#situations--section .situations--content {
+        margin: 0 auto;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 10px;
+    }
+}
