--- a/src/others/FeaturedServices.css
+++ b/src/others/FeaturedServices.css
@@ -44,3 +44,24 @@ section#featured--services .featured--services--offers {
     align-items: center;
     justify-content: center;
 }
+
+
+/* media queries */
+
+/* small phones */
+@media screen and (max-width: 700px) {
+    .book--appointment {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 0 1rem;
+        margin: 3rem 0 0 0;
+    }
+    section#featured--services .featured--services--heading h3 {
+        font-size: 2rem;
+        margin-bottom: 20px;
+    }
+    section#featured--services .featured--services--text p {
+        font-size: 1rem;
+    }
+}
