--- a/src/styles/ContactForm.css
+++ b/src/styles/ContactForm.css
@@ -82,3 +82,37 @@ section#contact--form--area form .submit--button button:hover {
     background-color: transparent;
     border: 3px solid rgb(216, 142, 3);
 }
+
+
+/* media queries */
+
+/* small phones */
+@media screen and (max-width: 700px) {
+    section#contact--form--area {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: 10rem auto 0rem;
+    }
+    
+    section#contact--form--area .contact--form--header {
+        text-align: center;
+        line-height: 1.3;
+        margin-bottom: 1.4rem;
+    }
+    
+    section#contact--form--area .contact--form--header h1 {
+        font-size: 2rem;
+    }
+    
+    section#contact--form--area form {
+        padding: 1.5rem;
+        width: 420px;
+        height: 630px;
+        box-shadow:  5px 5px 24px #f0f0f0,
+                    -5px -5px 24px #ffffff;
+    }
+    
+}
