--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -50,8 +50,10 @@
     justify-content: left;
 }
 
-#footer--area .summary .logo img {
+#footer--area .summary .logo .icon img.footer--logo {
     margin-right: 1rem;
+    width: 60px;
+	height: 60px;
 }
 
 #footer--area .summary .logo p {
@@ -175,4 +177,181 @@
 
 #footer--area .get--in_touch .get--in--touch__form form .input--area button:hover {
     cursor: pointer;
+}
+
+/* media queries */
+
+/* small phone  */
+@media screen and (max-width: 700px) {
+    #footer--area  {
+        padding: 1rem;
+    }
+    #footer--area .copyrights {
+        text-align: center;
+        width: 100%;
+    }
+    
+    #footer--area .copyrights p {
+        font-size: 1rem;
+    }
+    
+    #footer--area .footer {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    
+    #footer--area .summary,
+    #footer--area .quick__links,
+    #footer--area .explore,
+    #footer--area .get--in_touch {
+        width: 400px;
+        height: 250px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    
+    #footer--area .summary {
+        margin: 1rem 0;
+    }
+    
+    /* #footer--area .summary .logo {
+        text-align: left;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    } */
+    
+    #footer--area .summary .logo .icon img.footer--logo {
+        margin-right: 1rem;
+        width: 40px;
+        height: 40px;
+    }
+    
+    #footer--area .summary .logo p {
+        color: white;
+        font-size: 2rem;
+        font-weight: bolder;
+        font-family: "Quicksand", sans-serif;
+    }
+    
+    #footer--area .summary .short--text {
+        margin: 1rem 0 2rem;
+        text-align: center;
+    }
+    
+    #footer--area .summary .short--text p {
+        color: white;
+        font-size: 1.1rem;
+        line-height: 1.4;
+        font-family: "Quicksand", sans-serif;
+    }
+    
+    #footer--area .summary .icon-links {
+        display: flex;
+        align-items: center;
+        text-align: center;
+    }
+    
+    #footer--area .summary .icon-links span {
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: white;
+        border-radius: 4px;
+    }
+    
+    #footer--area .summary .icon-links span:nth-child(1), 
+    #footer--area .summary .icon-links span:nth-child(2), 
+    #footer--area .summary .icon-links span:nth-child(3), 
+    #footer--area .summary .icon-links span:nth-child(4) {
+        margin-right: 1rem;
+    }
+    
+    #footer--area .summary .icon-links span i {
+        font-size: 20px;
+    }
+    
+    #footer--area .get--in_touch .get-in-touch__header,
+    #footer--area .explore .explore__links__header,
+    #footer--area .quick__links .quick__links__header {
+        margin: 1rem 0;
+    }
+    
+    #footer--area .get--in_touch .get-in-touch__header h3,
+    #footer--area .explore .explore__links__header h3,
+    #footer--area .quick__links .quick__links__header h3 {
+        color: white;
+        font-size: 2rem;
+    }
+    
+    #footer--area .explore .e__links ul li,
+    #footer--area .quick__links .q__links ul li {
+        line-height: 2;
+        color: white;
+        padding-left: 0;
+    }
+    
+    #footer--area .explore .e__links ul li:hover,
+    #footer--area .quick__links .q__links ul li:hover {
+        padding-left: 1rem;
+        color: rgba(95, 59, 4, 0.664);
+        transition: all 0.4s ease-in-out;
+    }
+    
+    #footer--area .explore .e__links ul li a,
+    #footer--area .quick__links .q__links ul li a {
+        font-size: 1rem;
+    }
+    
+    #footer--area .get--in_touch .get-in-touch__text {
+        margin: 1rem 0;
+    }
+    
+    #footer--area .get--in_touch .get-in-touch__text p {
+        color: white;
+        font-size: 1rem;
+        line-height: 1.5;
+        width: 90%;
+        text-align: center;
+    }
+    
+    #footer--area .get--in_touch .get--in--touch__form {
+        width: 90%;
+    }
+    
+    #footer--area .get--in_touch .get--in--touch__form form .input--area {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    #footer--area .get--in_touch .get--in--touch__form form input {
+        width: 100%;
+        padding: 0.6rem 1rem;
+        outline: none;
+        border: none;
+        font-family: "Quicksand", sans-serif;
+    }
+    
+    #footer--area .get--in_touch .get--in--touch__form form .input--area button {
+        padding: 0.6rem;
+        outline: none;
+        border: none;
+        margin-left: 5px;
+    }
+    
+    #footer--area .get--in_touch .get--in--touch__form form .input--area button .fa-send {
+        color: rgba(95, 59, 4, 0.664);
+    }
+    
+    #footer--area .get--in_touch .get--in--touch__form form .input--area button:hover {
+        cursor: pointer;
+    }   
 }
