--- a/src/others/FeaturedServices.css
+++ b/src/others/FeaturedServices.css
@@ -1,21 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
+
 section#featured--services {
     width: 100%;
-    margin: 20rem 0rem 0rem 0rem;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 section#featured--services .featured--services--heading {
     text-align: center;
     margin-bottom: 1em;
-    text-transform: uppercase;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    font-family: 'Caveat', cursive;
 }
 
 section#featured--services .featured--services--heading h3 {
-    font-size: 3rem;
+    text-transform: capitalize;
+    font-size: 4rem;
     margin-bottom: 20px;
+    font-family: 'Caveat', cursive;
 }
 
 section#featured--services .featured--services--text {
@@ -39,7 +47,8 @@ section#featured--services .featured--services--offers {
 */
 
 .book--appointment {
-    width: 100%;
+    width: 100vw;
+    height: 70vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -52,6 +61,7 @@ section#featured--services .featured--services--offers {
 @media screen and (max-width: 700px) {
     .book--appointment {
         width: 100%;
+        height: 90vh;
         display: flex;
         flex-direction: column;
         padding: 0 1rem;
