--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -2,9 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
+section#about--me {
+    margin-top: 5rem;
+}
+
 section#about--me .about--content {
     width: 100%;
-    margin: 20rem 0rem 0rem 0rem;
+    height: 100vh;
+    margin: 2rem 0rem 0rem 0rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -78,6 +83,7 @@ section#about--me .about--content .download--resume button:hover {
 @media screen and (max-width: 700px) {
     #about--me {
         width: 100%;
+        height: 70vh;
         display: flex;
         align-items: center;
         justify-content: center;
