--- a/src/styles/ContactForm.css
+++ b/src/styles/ContactForm.css
@@ -1,10 +1,10 @@
 section#contact--form--area {
-    width: 55%;
+    width: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin: 10rem auto 0rem;
 }
 
 section#contact--form--area .contact--form--header {
@@ -14,7 +14,8 @@ section#contact--form--area .contact--form--header {
 }
 
 section#contact--form--area .contact--form--header h1 {
-    font-size: 3rem;
+    font-size: 4rem;
+    font-family: 'Caveat', cursive;
 }
 
 section#contact--form--area form {
