--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -137,12 +137,8 @@ header .hero--section .hero--button--area a:hover {
         text-align: center;
         font-weight: 100; */
     }
-    header .hero--section .hero--section-text p {
-        color: white;
-        font-size: 1.8rem;
-        margin-top: 3rem;
-        text-align: center;
-        font-weight: 100;
+    header .hero--section .hero--section-text {
+        width: 90%;
     }
     header .hero--section .hero--button--area a {
         color: white;
