--- a/src/styles/LetsTalk.css
+++ b/src/styles/LetsTalk.css
@@ -1,17 +1,22 @@
 section#lets--talk--area {
-    margin: 10rem auto 0rem;
-    text-align: center;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 section#lets--talk--area .lets--talk--header h2 {
-    font-size: 3rem;
+    font-size: 4rem;
     font-weight: bolder;
     margin-bottom: 1.5rem;
+    font-family: 'Caveat', cursive;
 }
 
 section#lets--talk--area .lets--talk--content {
-    width: 35%;
-    margin: auto;
+    width: 70%;
+    text-align: center;
 }
 
 section#lets--talk--area .lets--talk--content p {
@@ -25,7 +30,7 @@ section#lets--talk--area .lets--talk--content p {
 /* small phones */
 @media screen and (max-width: 700px) {
     section#lets--talk--area {
-        margin: 15rem auto 0rem;
+        margin: 15rem 0 0rem;
         text-align: center;
     }
     
@@ -37,7 +42,6 @@ section#lets--talk--area .lets--talk--content p {
     
     section#lets--talk--area .lets--talk--content {
         width: 90%;
-        margin: auto;
     }
     
     section#lets--talk--area .lets--talk--content p {
