--- a/src/styles/Packages.css
+++ b/src/styles/Packages.css
@@ -1,7 +1,7 @@
 section#packages--area {
     margin: 15rem 0 0 0;
     width: 100%;
-    height: auto;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,8 +11,9 @@ section#packages--area {
 section#packages--area .packages--header {
     margin: 1rem 0;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 4rem;
     font-weight: bolder;
+    font-family: 'Caveat', cursive;
 }
 
 section#packages--area .packages--header__text {
@@ -169,7 +170,12 @@ section#packages--area .packages--container .standard .get--started__btn button 
 /* small phones */
 @media screen and (max-width: 700px) {
     section#packages--area {
-        margin: 10rem 0 0 0;
+        width: 100%;
+        height: 250vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
     }
     section#packages--area .packages--header {
         margin: 1rem 0;
