--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -1,6 +1,10 @@
 section#services--area {
     width: 100vw;
-    margin: 20rem 0rem 0rem 0rem;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 section#services--area .services--header {
@@ -18,10 +22,10 @@ section#services--area .services--header hr {
 
 section#services--area .services--header h1 {
     text-align: center;
-    font-size: 3rem;
-    text-transform: uppercase;
+    font-size: 4rem;
+    text-transform: capitalize;
     color: rgb(0, 0, 0);
-    letter-spacing: 5px;
+    font-family: 'Caveat', cursive;
 }
 
 section#services--area .services--brief--text p {
@@ -29,6 +33,8 @@ section#services--area .services--brief--text p {
     font-size: 1.2rem;
     text-transform: capitalize;
     text-align: center;
+    width: 700px;
+    line-height: 1.5;
 }
 
 section#services--area .services {
@@ -42,20 +48,20 @@ section#services--area .services {
 @media screen and (max-width: 700px) {
     section#services--area {
         width: 100vw;
-        margin: 10rem 0rem 0rem 0rem;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
     }
-    section#services--area .services--header h1 {
-        text-align: center;
-        font-size: 2rem;
-        text-transform: uppercase;
-        color: rgb(0, 0, 0);
-        letter-spacing: 5px;
+    section#services--area .services--brief--text {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 90%;
     }
     section#services--area .services--brief--text p {
-        margin-top: 1.1rem;
         font-size: 1rem;
-        text-transform: capitalize;
-        text-align: center;
     }
     section#services--area .services {
         width: 100%;
