--- a/src/styles/Situations.css
+++ b/src/styles/Situations.css
@@ -38,11 +38,12 @@ section#situations--section .situations--content {
 @media screen and (max-width: 700px) {
     section#situations--section {
         width: 100%;
-        height: 140vh;
+        height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        margin-top: 40rem;
     }
     section#situations--section .situations--header h2 {
         font-size: 3rem;
