--- a/src/others/AppointmentImage.css
+++ b/src/others/AppointmentImage.css
@@ -14,5 +14,6 @@ img.appointment--image {
         height: 460px;
         margin-top: 11rem;
         object-fit: cover;
+        margin-top: 20rem;
     }
 }
