--- a/src/others/BookAppointment.css
+++ b/src/others/BookAppointment.css
@@ -78,10 +78,7 @@ form.book--appointment__form button:hover {
 @media screen and (max-width: 700px) {
     form.book--appointment__form {
         margin-top: 3rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        text-align: center;
     }
     form.book--appointment__form .form--header.appointment {
         margin-top: 12rem;
@@ -92,14 +89,14 @@ form.book--appointment__form button:hover {
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        margin: 0.6rem 0 0rem -6rem;
+        margin: 0.6rem 0 0rem -3.3rem;
     }
     form.book--appointment__form .input--area input {
         width: 280%;
         padding: 0.7rem 1rem;
         border: 1px solid rgb(223, 223, 223);
         border-radius: 3px;
-        margin: 0.2rem -3rem;
+        margin: 1rem -3rem 0 -3rem;
         outline: none;
     }
     form.book--appointment__form .input--area input[type='date'] {
