--- a/src/others/FeaturedServices.css
+++ b/src/others/FeaturedServices.css
@@ -61,17 +61,20 @@ section#featured--services .featured--services--offers {
 @media screen and (max-width: 700px) {
     .book--appointment {
         width: 100%;
-        height: 90vh;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         padding: 0 1rem;
-        margin: 3rem 0 0 0;
+    }
+    section#featured--services {
+        margin-top: 65rem;
     }
     section#featured--services .featured--services--heading h3 {
         font-size: 2rem;
         margin-bottom: 20px;
     }
     section#featured--services .featured--services--text p {
-        font-size: 1rem;
+        font-size: 1.1rem;
+        margin: 2rem 0 2rem 1rem;
     }
 }
