--- a/src/styles/Packages.css
+++ b/src/styles/Packages.css
@@ -171,11 +171,12 @@ section#packages--area .packages--container .standard .get--started__btn button 
 @media screen and (max-width: 700px) {
     section#packages--area {
         width: 100%;
-        height: 250vh;
+        height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        margin-top: 90rem;
     }
     section#packages--area .packages--header {
         margin: 1rem 0;
